# GestureTracking

./: .gitignore  CMakeLists.txt  GestureTracking.pro.user.2.7pre1  README.md  main.cpp
src/: ColorFinder.h  IntegralOrientationHistogram.cpp  IntegralOrientationHistogram.h  blobgetter.cpp  blobgetter.h  blobintegralhistogram.cpp  blobintegralhistogram.h  blobprocessor.cpp  blobprocessor.h  classifier.cpp  classifier.h  colorFinder.cpp  controller.cpp  controller.h  featuresextractor.cpp  featuresextractor.h  motionestimator.cpp  motionestimator.h  motionestimator_serial.cpp  motionestimator_serial.h  timedispersion.cpp  timedispersion.h  vibe.cpp  vibe.h  vibe2.cpp  vibe2.h
